Fixed bug with horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Arimo:400|Raleway:300,400,700&display=swap");
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   color: #fff;
